--- a/Week 8/homepage/traveler/styles-light.css
+++ b/Week 8/homepage/traveler/styles-light.css
@@ -1,3 +1,12 @@
+a {
+    color: #ffaf37;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     background-attachment: fixed;
     background-color: #b37029;
@@ -42,8 +51,12 @@ body {
     top: 0px;
 }
 
+#return {
+    color: #d4801e;
+}
+
 .thought {
-    color: #523c25;
+    color: #784918;
 }
 
 #welcome {
