--- a/Week 8/homepage/traveler/styles-dark.css
+++ b/Week 8/homepage/traveler/styles-dark.css
@@ -1,3 +1,12 @@
+a {
+    color: #ffaf37;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     background-attachment: fixed;
     background-color: #221e1f;
@@ -38,6 +47,10 @@ body {
     height: auto;
     width: 200px;
     top: 0px;
+}
+
+#return {
+    color: #784918;
 }
 
 .thought {
