--- a/Week 8/homepage/traveler/styles-dark.css
+++ b/Week 8/homepage/traveler/styles-dark.css
@@ -20,9 +20,16 @@ body {
     color: #a55f0d;
 }
 
+#fishy {
+    border: thick double #523c25;
+    display: block;
+    margin: 10% auto;
+    padding: 20px;
+}
+
 #footer {
     bottom: 4%;
-    left: 75%;
+    left: 85%;
     font-family: 'Courier New', Courier, monospace;
     position: fixed;
     width: 100%;
@@ -45,6 +52,7 @@ body {
 
 #lightbulb {
     display: none;
+    float: right;
     height: auto;
     width: 200px;
     top: 0px;
