--- a/Week9/finance/templates/buy.html
+++ b/Week9/finance/templates/buy.html
@@ -10,7 +10,7 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text">
         </div>
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="Shares" type="text">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="Share(s)" type="text">
         </div>
         <button class="btn btn-primary" type="submit">Buy</button>
     </form>
