--- a/Week9/finance/templates/sold.html
+++ b/Week9/finance/templates/sold.html
@@ -7,9 +7,9 @@
 {% block main %}
     <form action="/sold" method="post">
         <div class="mb-3">
-            Success! {{ shares }} share(s) sold of {{ symbol }} at ${{ price }}/share.
+            Success! {{ -1 * shares }} share(s) sold of {{ symbol }} at ${{ price }}/share.
             <p>
-                Total sold: ${{ total }}.
+                Total sold: ${{ -1 * total }}.
             </p>
             <p>
                 Remaining funds: ${{ remainder }}.
