--- a/Week9/finance/templates/history.html
+++ b/Week9/finance/templates/history.html
@@ -6,23 +6,30 @@
 
 {% block main %}
     <div class="mb-3">
-        <table class="table">
-            <thead>
-                <tr>
-                    {% for i in summary[0] %}
-                        <th>{{ i.upper() }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                    {% for i in summary %}
-                        <tr>
-                        {% for j in i %}
-                            <td>{{ i[j] }}</td>
+        {% if summary %}
+            <table class="table">
+                <thead>
+                    <tr>
+                            {% for i in summary[0] %}
+                                <th>{{ i.upper() }}</th>
+                            {% endfor %}
+                    </tr>
+                </thead>
+                <tbody>
+                        {% for i in summary %}
+                            <tr>
+                            {% for j in i %}
+                                <td>{{ i[j] }}</td>
+                            {% endfor %}
+                            </tr>
                         {% endfor %}
-                        </tr>
-                    {% endfor %}
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+
+        {% else %}
+            No transaction history available.
+
+        {% endif %}
+
     </div>
 {% endblock %}
