--- a/Week9/finance/templates/sold.html
+++ b/Week9/finance/templates/sold.html
@@ -4,20 +4,20 @@
     Sold
 {% endblock %}
 
-
 {% block main %}
     <form action="/sold" method="post">
         <div class="mb-3">
-            Success! {{ -1 * shares }} share(s) sold of {{ symbol }} at ${{ price }}/share.
+            Success! {{ -1 * shares }} share(s) sold of {{ symbol }} at {{ price | usd }}/share.
             <p>
-                Total sold: ${{ -1 * total }}.
+                Total sold: {{ total | usd }}.
             </p>
             <p>
-                Remaining funds: ${{ remainder }}.
-            </p> 
+                Remaining funds: {{ remainder | usd }}.
+            </p>
             <p>
                 Sell <a href="/sell">more.</a>
-            </p> 
+            </p>
+
         </div>
     </form>
 {% endblock %}
