--- a/Week9/finance-old/templates/bought.html
+++ b/Week9/finance-old/templates/bought.html
@@ -7,15 +7,15 @@
 {% block main %}
     <form action="/bought" method="post">
         <div class="mb-3">
-            Success! {{ shares }} share(s) purchased of {{ symbol }} at {{ price | usd }}/share.
+            Success! {{ shares }} share(s) purchased of {{ symbol }} at ${{ price }}/share.
             <p>
-                Total spent: {{ total | usd }}.
+                Total spent: ${{ total }}.
             </p>
             <p>
-                Remaining funds: {{ remainder | usd }}.
+                Remaining funds: ${{ remainder }}.
             </p>
             <p>
-                Purchase <a href="/buy">more.</a>
+                Purchase <a href="/buy">more.</a> 
             </p>
 
         </div>
