--- a/Week9/finance/templates/sell.html
+++ b/Week9/finance/templates/sell.html
@@ -6,9 +6,15 @@
 
 {% block main %}
     <form action="/sell" method="post">
-        <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="text">
-        </div>
+        <!-- <div class="mb-3">
+            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="symbol" name="symbol" placeholder="Symbol" type="select">
+        </div> -->
+        <select class="form-select" id="symbol" name="symbol">
+            <option selected>Symbol</option>
+            {% for symbol in symbols %}
+                <option value="{{ symbol }}">{{ symbol }}</option>
+            {% endfor %}
+          </select>
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="shares" name="shares" placeholder="Share(s)" type="text">
         </div>
